Bug Fix - whitespace overflowing on right side of the add_review and edit_review templates. Resolved by adding a 'container-fluid' class div to each template

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -52,6 +52,12 @@ ul {
     }
 
 
+    @media (max-width: 900px) {
+        .header-container {
+            padding-top: 25px;
+        }
+    }
+
     @media (max-width: 600px) {
         .header-container {
             padding-top: 50px;
